Various UI fixes and improvements.
* Fixed dialog buttons vertical alignment in footer.
* Improved resizer, elementspath and dialog footer buttons interaction.
* Added an appropriate hover state for OK dialog button.

* Fixed broken codestyle in Moono CSS files.
* Fixed: invisible toolbar separators in IE7.
* Fixed: Combo boxes are much too big when RTL under IE7.
* Fixed: broken dialog tabs and close button under Firefox 3.6.
* Fixed: toolbar collapser looks bad under IEs.

--- a/skins/moono/editor_ie.css
+++ b/skins/moono/editor_ie.css
@@ -37,18 +37,13 @@ a.cke_combo_button:hover .cke_combo_inlinelabel
 
 .cke_toolbox_collapser
 {
-	border: 2px outset #efefef;
+	border: 1px solid #a6a6a6;
 }
 
 .cke_toolbox_collapser .cke_arrow
 {
-	margin: 0 1px 1px 1px;
+	margin-top: 1px;
 }
-.cke_toolbox_collapser.cke_toolbox_collapser_min .cke_arrow
-{
-	margin-left: 2px;
-}
-
 .cke_resizer
 {
 }
